--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,9 @@ nltk==3.5
 numpy==1.20.1
 opencv_python==4.5.5.64
 overrides==3.1.0
+protobuf==3.20.0
 pytesseract==0.3.9
 python_dateutil==2.8.2
 requests==2.24.0
 torch==1.7.1
-url-regex==1.0.4
+url_regex==1.0.4
